# Smart-Home-Project

./: Adapter.h  BrandAFactory.h  BrandBFactory.h  CMakeLists.txt  Device.h  DeviceGroup.h  DoorLock.h  IDeviceFactory.h  MotionSensor.h  Observer.h  SmartHomeFacade.h  SmartHomeHub.h  main.cpp
Commands/: Command.h  CommandManager.h  TurnOffCommand.h  TurnOnCommand.h  TurnOnGroupCommand.h
Lights/: HalogenLight.h  LEDLight.h  Light.h
State/: AdujstState.h  DeviceState.h  OffState.h  Onstate.h
Thermostat/: SmartThermostatA.h  SmartThermostatB.h  Thermostat.h
